Complete initial mobile layout
Finished initial mobile layout.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Me Dashboard, Me Boy</title>
 </head>
 <body>
-    
+    <div id="sidebar">
+        sidebar
+    </div>
+
+    <div id="header">
+        header
+    </div>
+    <div id="main-content">
+        main content
+    </div>
 </body>
 </html>
