Add sidebar content and icons
Added sidebar content and icons, as well as a search
input in the header.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="js/script.js"></script>
     <title>Me Dashboard, Me Boy</title>
 </head>
 <body>
     <div id="sidebar">
-        sidebar
+        <div id="logo"><img src="images/logo.png" alt="Silhouette of a tree and it's roots"></div>
+        <a href="#"><span class="material-symbols-outlined">home</span></a>
+        <a href="#"><div id="home" class="sidebar-item">Home</div></a>
+        <a href="#"><span class="material-symbols-outlined">person</span></a>
+        <a href="#"><div id="profile" class="sidebar-item">Profile</div></a>
+        <a href="#"><span class="material-symbols-outlined">groups</span></a>
+        <a href="#"><div id="characters" class="sidebar-item">Characters</div></a>
+        <a href="#"><span class="material-symbols-outlined">book_5</span></a>
+        <a href="#"><div id="player-journal" class="sidebar-item">Player Journal</div></a>
+        <a href="#"><span class="material-symbols-outlined">book_2</span></a>
+        <a href="#"><div id="campaign-journal" class="sidebar-item">Campaign Journal</div></a>
+        <a href="#"><span class="material-symbols-outlined">list</span></a>
+        <a href="#"><div id="inventory" class="sidebar-item">Inventory</div></a>
+        <a href="#"><span class="material-symbols-outlined">library_books</span></a>
+        <a href="#"><div id="library" class="sidebar-class">Demiplane Library</div></a>
+        <a href="#"><span class="material-symbols-outlined">settings</span></a>
+        <a href="#"><div id="settings" class="sidebar-item">Settings</div></a>
     </div>
 
     <div id="header">
-        header
+        <form action="" method="get">
+            <label for="search">
+                <span class="material-symbols-outlined">search</span>
+            </label>
+            <input type="search" name="search" id="search">
+        </form>
     </div>
     <div id="main-content">
         main content
