--- a/index.html
+++ b/index.html
@@ -4,41 +4,103 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="js/script.js"></script>
     <title>Me Dashboard, Me Boy</title>
 </head>
 <body>
-    <div id="sidebar">
-        <div id="logo"><img src="images/logo.png" alt="Silhouette of a tree and it's roots"></div>
-        <a href="#"><span class="material-symbols-outlined">home</span></a>
-        <a href="#"><div id="home" class="sidebar-item">Home</div></a>
-        <a href="#"><span class="material-symbols-outlined">person</span></a>
-        <a href="#"><div id="profile" class="sidebar-item">Profile</div></a>
-        <a href="#"><span class="material-symbols-outlined">groups</span></a>
-        <a href="#"><div id="characters" class="sidebar-item">Characters</div></a>
-        <a href="#"><span class="material-symbols-outlined">book_5</span></a>
-        <a href="#"><div id="player-journal" class="sidebar-item">Player Journal</div></a>
-        <a href="#"><span class="material-symbols-outlined">book_2</span></a>
-        <a href="#"><div id="campaign-journal" class="sidebar-item">Campaign Journal</div></a>
-        <a href="#"><span class="material-symbols-outlined">list</span></a>
-        <a href="#"><div id="inventory" class="sidebar-item">Inventory</div></a>
-        <a href="#"><span class="material-symbols-outlined">library_books</span></a>
-        <a href="#"><div id="library" class="sidebar-class">Demiplane Library</div></a>
-        <a href="#"><span class="material-symbols-outlined">settings</span></a>
-        <a href="#"><div id="settings" class="sidebar-item">Settings</div></a>
-    </div>
-
-    <div id="header">
-        <form action="" method="get">
-            <label for="search">
-                <span class="material-symbols-outlined">search</span>
-            </label>
-            <input type="search" name="search" id="search">
-        </form>
-    </div>
-    <div id="main-content">
-        main content
+    <div id="main-container">
+        <div id="sidebar">
+            <div id="logo"><img src="images/logo.png" alt="Silhouette of a tree and it's roots"></div>
+            <a href="#"><span class="material-symbols-rounded">home</span></a>
+            <a href="#"><div id="home" class="sidebar-item">Home</div></a>
+            <a href="#"><span class="material-symbols-rounded">person</span></a>
+            <a href="#"><div id="profile" class="sidebar-item">Profile</div></a>
+            <a href="#"><span class="material-symbols-rounded">groups</span></a>
+            <a href="#"><div id="characters" class="sidebar-item">Characters</div></a>
+            <a href="#"><span class="material-symbols-rounded">book_5</span></a>
+            <a href="#"><div id="player-journal" class="sidebar-item">Player Journal</div></a>
+            <a href="#"><span class="material-symbols-rounded">book_2</span></a>
+            <a href="#"><div id="campaign-journal" class="sidebar-item">Campaign Journal</div></a>
+            <a href="#"><span class="material-symbols-rounded">list</span></a>
+            <a href="#"><div id="inventory" class="sidebar-item">Inventory</div></a>
+            <a href="#"><span class="material-symbols-rounded">library_books</span></a>
+            <a href="#"><div id="library" class="sidebar-class">Demiplane Library</div></a>
+            <a href="#"><span class="material-symbols-rounded">settings</span></a>
+            <a href="#"><div id="settings" class="sidebar-item">Settings</div></a>
+        </div>
+            <div id="header">
+                <div id="top-right-header">
+                    <div id="notifications"><span class="material-symbols-rounded">notifications</span></div>
+                    <div id="avatar"><img src="images/wizard.jpeg" alt="a hooded wizard with glowing eyes"></div>
+                    <div id="user-name">Wizard Cloakman</div>
+                </div>
+                <form action="" method="get">
+                    <label for="search">
+                        <span class="material-symbols-rounded">search</span>
+                    </label>
+                    <input type="search" name="search" id="search">
+                </form>
+            </div>
+        <div id="main-content">
+            <div class="card" id="next-session">
+                <div class="card-title"><h2>Next Session</h2></div>
+                <div class="card-content">November 14th, 2023
+                    <div class="card-icons">
+                        <span class="material-symbols-rounded">star</span>
+                        <span class="material-symbols-rounded">edit_note</span>
+                        <span class="material-symbols-rounded">share</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card" id="to-do">
+                <div class="card-title"><h2>Pre-Session To-Do</h2></div>
+                <div class="card-content">
+                    <ul>
+                        <li>Level up</li>
+                        <li>Read exploration rules</li>
+                        <li>Look over notes</li>
+                    </ul>
+                    <div class="card-icons">
+                        <span class="material-symbols-rounded">star</span>
+                        <span class="material-symbols-rounded">edit_note</span>
+                        <span class="material-symbols-rounded">share</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card" id="lorem-one">
+                <div class="card-title"><h2>Lorem One</h2></div>
+                <div class="card-content">
+                    <p>
+                        What happened magic untrap how are you doing 
+                        today Look!. Fire shield cold Southwall Gate 
+                        birdslain enemy you deceived me. Trap! March 
+                        KAAOS Dark demi-gods listen to my laughter.
+                    </p>
+                    <div class="card-icons">
+                        <span class="material-symbols-rounded">star</span>
+                        <span class="material-symbols-rounded">edit_note</span>
+                        <span class="material-symbols-rounded">share</span>
+                    </div>
+                </div>
+            </div>
+            <div class="card" id="lorem-two">
+                <div class="card-title"><h2>Lorem Two</h2></div>
+                <div class="card-content">
+                    <p>
+                        I found it i am your servant him, his your heart 
+                        is that of the lion. You're welcome Undead Lords 
+                        UDL are you finished Sea elf. You are beautiful 
+                        this he had too much wine mead ale Swordmaster.
+                    </p>
+                    <div class="card-icons">
+                        <span class="material-symbols-rounded">star</span>
+                        <span class="material-symbols-rounded">edit_note</span>
+                        <span class="material-symbols-rounded">share</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
