Finish layout and final responsive tweaks
Completed larger screen layout and overall responsiveness.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <div id="avatar"><img src="images/wizard.jpeg" alt="a hooded wizard with glowing eyes"></div>
                     <div id="user-name">Wizard Cloakman</div>
                 </div>
+                <span id="header-title"></span>
                 <form action="" method="get">
                     <label for="search">
                         <button>
@@ -105,74 +106,128 @@
                         <button class="share"><span class="material-symbols-rounded">share</span></button>
                     </div>
                 </div>
-            </div>
-            <div id="announcements-container">
-                <h2>Announcements</h2>
-                <div id="announcements-inner-container">
-                    <div class="announcement">
-                        <div class="announcement-title">
-                            <h3>Site Maintenance</h3>
-                        </div>
-                        <div class="announcement-content">
-                            <p>
-                                The site will be temporarily down for maintenance
-                                on your mom's birthday. Get it?
-                            </p>
-                        </div>
+                <div class="card" id="lorem-three">
+                    <div class="card-title"><h3>Lorem Two</h3></div>
+                    <div class="card-content">
+                        <p>
+                            Men imya ram en' templa tanya nae n'quel lle quella amin utue ta. Quel marth Isilya uuma dela cormamin lindua ele lle. Mori'quessir lle naa curucuar malia ten' vasa Detholalle. Templa en' tessa lye naa lle nai Taraerea ta naa neuma!.
+                        </p>
                     </div>
-                    <div class="announcement">
-                        <div class="announcement-title">
-                            <h3>Software Changes</h3>
-                        </div>
-                        <div class="announcement-content">
-                            <p>
-                                Earthquake magic trap Spring Festival agility.
-                            </p>
-                        </div>
+                    <div class="card-icons">
+                        <button class="star"><span class="material-symbols-rounded">star</span></button>
+                        <button class="edit"><span class="material-symbols-rounded">edit_note</span></button>
+                        <button class="share"><span class="material-symbols-rounded">share</span></button>
                     </div>
-                    <div class="announcement">
-                        <div class="announcement-title">
-                            <h3>Date Change</h3>
-                        </div>
-                        <div class="announcement-content">
-                            <p>
-                                Fire Field Westbridge Dwarf Bridge help me! mirror image.
-                            </p>
-                        </div>
+                </div>
+                <div class="card" id="lorem-four">
+                    <div class="card-title"><h3>Lorem Two</h3></div>
+                    <div class="card-content">
+                        <p>
+                            Cuamin linduva yassen megrille vara tel' taurninin iire lye lle auta pelekta yassen runya. Morierea amin vasa lle sinta faina templa ta. An lema yala onna en' alu Ianterea manke naa lye omentien? Narquelie yala onna en' alu lle vesta i'narr en gothrim glinuva nuin i'anor.
+                        </p>
+                    </div>
+                    <div class="card-icons">
+                        <button class="star"><span class="material-symbols-rounded">star</span></button>
+                        <button class="edit"><span class="material-symbols-rounded">edit_note</span></button>
+                        <button class="share"><span class="material-symbols-rounded">share</span></button>
+                    </div>
+                </div>
+                <div class="card" id="lorem-six">
+                    <div class="card-title"><h3>Lorem Two</h3></div>
+                    <div class="card-content">
+                        <p>
+                            Naur tinchor osturra tanka tel' taurnin Rah'edan amin autien rath. Amin uuma malia 'kshonna, wanya Ringare Anarya. Ndengina ta ho Tel'Mithrim amin naa tualle lye. Naugiaur Detholalle Ruthaerea Qualohtarie.
+                        </p>
+                    </div>
+                    <div class="card-icons">
+                        <button class="star"><span class="material-symbols-rounded">star</span></button>
+                        <button class="edit"><span class="material-symbols-rounded">edit_note</span></button>
+                        <button class="share"><span class="material-symbols-rounded">share</span></button>
+                    </div>
+                </div>
+                <div class="card" id="lorem-seven">
+                    <div class="card-title"><h3>Lorem Two</h3></div>
+                    <div class="card-content">
+                        <p>
+                            Estolada sinome faina templa Tel'Sindavathar mani ume lle quena? Amin merna quen lova handasse Heruamin 'Ksherea. Mani er yala rauko tyela neuma gurth gothrim tel'quessir. Yallume creoso, mellonamin Laara'tincoras Sii'.
+                        </p>
+                    </div>
+                    <div class="card-icons">
+                        <button class="star"><span class="material-symbols-rounded">star</span></button>
+                        <button class="edit"><span class="material-symbols-rounded">edit_note</span></button>
+                        <button class="share"><span class="material-symbols-rounded">share</span></button>
                     </div>
                 </div>
             </div>
-            <div id="updates-container">
-                <h2>Recent Updates</h2>
-                <div id="updates-inner-container">
-                    <div class="update">
-                        <div class="update-title">
-                            <span class="material-symbols-rounded">data_info_alert</span><h3>Pretty Good Updates</h3>
+            <div id="right-side-container">
+                <div id="announcements-container">
+                    <h2>Announcements</h2>
+                    <div id="announcements-inner-container">
+                        <div class="announcement">
+                            <div class="announcement-title">
+                                <h3>Site Maintenance</h3>
+                            </div>
+                            <div class="announcement-content">
+                                <p>
+                                    The site will be temporarily down for maintenance
+                                    on your mom's birthday. Get it?
+                                </p>
+                            </div>
                         </div>
-                        <div class="update-content">
-                            <p>
-                                That one guy did something pretty funny.
-                            </p>
+                        <div class="announcement">
+                            <div class="announcement-title">
+                                <h3>Software Changes</h3>
+                            </div>
+                            <div class="announcement-content">
+                                <p>
+                                    Earthquake magic trap Spring Festival agility.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="announcement">
+                            <div class="announcement-title">
+                                <h3>Date Change</h3>
+                            </div>
+                            <div class="announcement-content">
+                                <p>
+                                    Fire Field Westbridge Dwarf Bridge help me! mirror image.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                    <div class="update">
-                        <div class="update-title">
-                            <span class="material-symbols-rounded">data_info_alert</span><h3>Another Good One</h3>
+                </div>
+                <div id="updates-container">
+                    <h2>Recent Updates</h2>
+                    <div id="updates-inner-container">
+                        <div class="update">
+                            <div class="update-title">
+                                <span class="material-symbols-rounded">data_info_alert</span><h3>Pretty Good Updates</h3>
+                            </div>
+                            <div class="update-content">
+                                <p>
+                                    That one guy did something pretty funny.
+                                </p>
+                            </div>
                         </div>
-                        <div class="update-content">
-                            <p>
-                                Somebody updated their whatever.
-                            </p>
+                        <div class="update">
+                            <div class="update-title">
+                                <span class="material-symbols-rounded">data_info_alert</span><h3>Another Good One</h3>
+                            </div>
+                            <div class="update-content">
+                                <p>
+                                    Somebody updated their whatever.
+                                </p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="update">
-                        <div class="update-title">
-                            <span class="material-symbols-rounded">data_info_alert</span><h3>Oh Shit! There's One More?!</h3>
-                        </div>
-                        <div class="update-content">
-                            <p>
-                                And this one's just nuts...like...whoa
-                            </p>
+                        <div class="update">
+                            <div class="update-title">
+                                <span class="material-symbols-rounded">data_info_alert</span><h3>Oh Shit! There's One More?!</h3>
+                            </div>
+                            <div class="update-content">
+                                <p>
+                                    And this one's just nuts...like...whoa
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
